update table text

--- a/index.html
+++ b/index.html
@@ -716,7 +716,7 @@ static boolean no(BinaryTree node) {
 <tr></tr><tr></tr>
 
         <tr>
-            <td><b>Starting Position: </b></td>
+            <td><b>Black moves ahead: </b></td>
             <td>
                 <table width="400px" border="2px" >
                     <tr align="center" bgcolor="#cccccc">
@@ -734,7 +734,7 @@ static boolean no(BinaryTree node) {
 
         <tr></tr><tr></tr>
         <tr>
-            <td><b>Starting Position: </b></td>
+            <td><b>White jumps: </b></td>
             <td>
                 <table width="400px" border="2px" >
                     <tr align="center" bgcolor="#cccccc">
@@ -754,7 +754,7 @@ static boolean no(BinaryTree node) {
         <tr></tr><tr></tr>
 
         <tr>
-            <td><b>Starting Position: </b></td>
+            <td><b>Black moves ahead: </b></td>
             <td>
                 <table width="400px" border="2px" >
                     <tr align="center" bgcolor="#cccccc">
@@ -773,7 +773,7 @@ static boolean no(BinaryTree node) {
 
         <tr></tr><tr></tr>
         <tr>
-            <td><b>Starting Position: </b></td>
+            <td><b>Black jumps: </b></td>
             <td>
                 <table width="400px" border="2px" >
                     <tr align="center" bgcolor="#cccccc">
